# mtm2024_terminologies

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: terms.py
src/mtm24/: terms.py
